Bug 332514 - Don't allow null argument to Sandbox constructor. r=brendan sr=jst